<resources>
    <string name="app_name">Dundjinn Tome</string>
    <string name="dundjinn_tome_logo">Dundjinn Tome Logo</string>
    <string name="dundjinn_tome_text">Dundjinn Tome Text</string>
    <string name="new_character_button">New Character</string>
    <string name="new_character">New Character</string>
    <string name="load_character">Load Character</string>
    <string name="load_character_button">Load Character</string>
    <string name="main_page">Main Page</string>
    <string name="skill_text">Skills</string>
    <string name="main_page_button">Main Page</string>
    <string name="skills_button">Skills</string>
    <string name="hpOver">%1$d/%2$d</string>
    <string name="current_health_over">Current Health</string>
    <string name="hp_logo">HP Logo</string>
    <string name="armorclass">%1$d</string>
    <string name="tb_armor">Armor Class</string>
    <string name="armor_class_logo">Armor Class Logo</string>
    <string name="xp_text">%1$d XP</string>
    <string name="tb_xp">Experience</string>
    <string name="xp_icon">Experience Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment">Equipment</string>
    <string name="spells">Spells</string>
    <string name="compendium">Compendium</string>
    <string name="class_features">Class Features</string>
    <string name="faq">FAQ</string>
    <string name="legal">Legal</string>
    <string name="charname">%1$s</string>
    <string name="charclass">%1$s</string>
    <string name="charlevel">%1$d</string>
    <string name="level">Level</string>
    <string name="fragment_back">Back</string>
    <string name="back_desc">Return to Main Menu</string>
    <string name="rollText">Roll</string>
    <string-array name="race">
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
        <item>Gnome</item>
        <item>Dragonborn</item>
        <item>Halfling</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Tiefling</item>
    </string-array>
    <string-array name="charClass">
        <item>Barbarian</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="attrLevel">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
