<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            tools:ignore="ExtraText">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
                    <ImageView
                        android:id="@+id/hpLogo"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:contentDescription="@string/hp_logo"
                        android:layout_marginStart="70dp"
                        app:srcCompat="@drawable/dt_health"
                        />

                    <TextView
                        android:id="@+id/healthOver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:contentDescription="@string/current_health_over"
                        android:text="@string/hpOver"
                        android:textSize="12pt"
                        android:layout_marginStart="110dp"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="200dp"
                        android:layout_gravity="start|center_vertical"
                        android:contentDescription="@string/armor_class_logo"
                        app:srcCompat="@drawable/dt_shield"
                        />

                    <TextView
                        android:id="@+id/ACOver"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="240dp"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/armorclass"
                        android:contentDescription="@string/tb_armor"
                        android:textSize="12pt"
                        />

                    <ImageView
                        android:id="@+id/xpStar"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="280dp"
                        android:contentDescription="@string/xp_icon"
                        app:srcCompat="@drawable/dt_xp_ic"
                        />

                    <TextView
                        android:id="@+id/xpText"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="320dp"
                        android:layout_gravity="start|center_vertical"
                        android:text="@string/xp_text"
                        android:contentDescription="@string/tb_xp"
                        android:textSize="12pt"
                        />
                />
        </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:layout_weight="0.011">
            <TextView
                android:id="@+id/charName"
                android:layout_rowSpan="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Character Name"
                android:textSize="12pt"
                />
        </GridLayout>

    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_menu" />

</android.support.v4.widget.DrawerLayout>