<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.roll.dundjinntome.start.StartActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-90dp"
            android:layout_marginBottom="175dp"
            app:srcCompat="@drawable/dt_title" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="240dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/book" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/newCharacter"
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/new_character_button"
            android:fontFamily="serif"
            android:onClick="newCharacter"
            android:text="@string/new_character"
            android:textSize="20pt" />

        <Button
            android:id="@+id/loadCharacter"
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/load_character_button"
            android:text="@string/load_character"
            android:onClick="loadCharacter"
            android:fontFamily="serif"
            android:textSize="20pt"
            android:visibility="visible"
            />
    </RelativeLayout>
</LinearLayout>
